# JsonToSqlite

./: README.md  package-lock.json  package.json
.github/workflows/: release.yml
database/: database.sqlite
elements/database/: database.sqlite
elements/json/: data_en.json  data_full_fr.json  test.json
elements/mapping/: mapping.json
elements/scripts/: json-to-sqlite-advanced.js
json/: data_full_en.json  data_full_pa_en.json  data_full_pa_fr.json
mapping/: base_practices_mapping.json
mapping/default/: defaults.json
scripts/: json-to-sqlite.js
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/db/: insert.rs  mod.rs  update.rs
src-tauri/src/json/: extract.rs  mod.rs
src/components/: DbTableSelector.tsx  FileSelector.tsx  JsonPathExplorer.tsx  JsonPreview.tsx  MappingEditor.tsx  ThemeToggle.tsx  Toast.tsx
src/context/: ThemeContext.tsx
src/layouts/: MainLayout.tsx
src/pages/: Home.tsx  ImportPage.tsx  UpdatePage.tsx
tests/: database.sqlite  json.json
